--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,10 +6,10 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 
 [vars]
-# UUID = "901d07d2-462d-4a2a-9923-5c1970e729e8"
-# PROXYIP = "103.168.146.169"
+UUID = "901d07d2-462d-4a2a-9923-5c1970e729e8"
+PROXYIP = "103.168.146.169"
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "901d07d2-462d-4a2a-9923-5c1970e729e8"
+# UUID = "901d07d2-462d-4a2a-9923-5c1970e729e8"
